# slife

./: .commit_msg  .gitignore  DESIGN.md  HARDISSUES.md  LICENSE  README.md  README.zh-CN.md  credstore.json5.example  install.ps1  install.sh  pyproject.toml  slife.json5  slife.json5.example  slife.template.json5
.github/workflows/: ci.yml  publish.yml
credstore/: README.md  __init__.py  __main__.py  _backend.py  _config.py  _resolver.py  _store.py  config.json5  pyproject.toml
credstore/credstore/: __init__.py  __main__.py  _backend.py  _enumerate.py  _shell.py  _store.py  _tty.py
credstore/tests/: test_backend.py  test_cli.py  test_config.py  test_enumerate.py  test_resolver.py  test_shell.py  test_store.py  test_tty.py
docs/: native-tools.md  plugins.md  wechat-article.md
skills/baidu-search/scripts/: search.py
skills/browser-harness/: CLI.md  SKILL.md  _meta.json
skills/browser-use/: SKILL.md
slife/: __init__.py  __main__.py  bootstrap.py  config.py  env.py  health.py  logfmt.py  os_detect.py  paths.py  platform.py  server_utils.py
slife/a2a/: __init__.py  broker.py  card.py  client.py  config.py  identity.py  mqtt.py  task_store.py  tools.py
slife/agent/: conversation.py  inbox.py  llm_client.py  loop.py  multimodal.py  service.py  system_prompt.py
slife/agent/templates/: system_prompt.j2
slife/credstore/: __init__.py  __main__.py  _backend.py  _config.py  _resolver.py  _store.py
slife/mcp/: __init__.py  client.py  oauth.py  process.py  tool_adapter.py
slife/plugins/: __init__.py
slife/plugins/mcp/: __init__.py  connection.py  server.py
slife/plugins/memory/: __init__.py  embedding_config.py  embeddings.py  schema.sql  search.py  server.py  store.py
slife/plugins/wechat/: __init__.py  client.py  config.py  server.py
slife/subagent/: __init__.py  headless.py  process.py  tools.py
slife/tools/: _config_io.py  a2a.py  base.py  cli.py  config_env.py  credentials.py  env.py  exec.py  factory.py  list_native_tools.py  os_info.py  pip.py  platform.py  registry.py  run_python_script.py  serper.py  shell.py  shell_command.py  skill.py  system.py  system_health.py  working_directory.py
slife/ui/: app.py  approval_dialog.py  chat.py  command_palette.py  commands.py  handler.py  slife.tcss  tool_display.py
slife_mcp/: README.md  __init__.py  connection.py  pyproject.toml  server.py
slife_memory/: README.md  __init__.py  embedding_config.py  embeddings.py  pyproject.toml  schema.sql  search.py  server.py  store.py
tests/: __init__.py  conftest.py  test_a2a_broker.py  test_a2a_config.py  test_a2a_mqtt.py  test_a2a_task_store.py  test_a2a_tools.py  test_agent_service.py  test_approval.py  test_bootstrap.py  test_commands.py  test_config.py  test_config_env.py  test_config_io.py  test_conversation.py  test_credentials.py  test_embedding_config.py  test_env.py  test_health.py  test_inbox.py  test_llm_client.py  test_logfmt.py  test_loop.py  test_main.py  test_mcp_client.py  test_mcp_connection.py  test_mcp_oauth.py  test_mcp_process.py  test_mcp_tool_adapter.py  test_memory_embeddings.py  test_memory_search.py  test_memory_store.py  test_multimodal.py  test_paths.py  test_platform.py  test_server_utils.py  test_subagent_headless.py  test_subagent_process.py  test_system_health.py  test_system_prompt.py  (+11 more)
tests/e2e/: test_mcp_filesystem.py
