[project]
name = "slife"
version = "0.1.0"
description = "Terminal-based AI agent — a function-calling loop with minimum harness"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "juzcn", email = "zhangjun@cueb.edu.cn" },
]
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "json5>=0.15.0",
    "jinja2>=3.1.0",
    "fastmcp>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/juzcn/slife"
Repository = "https://github.com/juzcn/slife"

[project.scripts]
slife = "slife:main"

[tool.hatch.build.targets.wheel]
packages = ["slife"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
