[project]
name = "slife"
version = "0.1.3"
description = "Terminal-based AI agent — a function-calling loop with minimum harness"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "juzcn", email = "zhangjun@cueb.edu.cn" },
]
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "json5>=0.15.0",
    "jinja2>=3.1.0",
    "fastmcp>=2.0.0",
    "paho-mqtt>=2.0.0",
    "aiosqlite>=0.22.1",
    "sqlite-vec>=0.1.9",
    "llama-cpp-python",
    "aiohttp>=3.14.1",
    "qrcode>=8.0",
    "Pillow>=11.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/juzcn/slife"
Repository = "https://github.com/juzcn/slife"

[project.scripts]
slife = "slife:main"

[tool.hatch.build.targets.wheel]
packages = ["slife"]

[tool.hatch.build.targets.sdist]
include = [
    "/slife",
    "/skills",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"
addopts = "-v --tb=short --strict-markers --strict-config --no-header"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]
markers = [
    "asyncio: mark a test as an async test (auto-applied by asyncio_mode=strict)",
    "slow: mark a test as slow (excluded from quick test runs with -m 'not slow')",
]

[tool.uv.sources]
llama-cpp-python = { url = "https://github.com/abetlen/llama-cpp-python/releases/download/v0.3.34-vulkan/llama_cpp_python-0.3.34-py3-none-win_amd64.whl" }
