[project]
name = "credstore"
version = "0.1.0"
description = "Cross-platform credential storage — OS keyring with encrypted file fallback"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "juzcn", email = "zhangjun@cueb.edu.cn" },
]
requires-python = ">=3.10"
dependencies = [
    "keyring>=25.0.0",
    "keyrings-cryptfile>=1.3.0",
]

[project.scripts]
credstore = "credstore.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
