[project]
name = "credstore"
version = "0.1.0"
description = "Cross-platform credential storage — OS keyring with encrypted file fallback"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "juzcn", email = "zhangjun@cueb.edu.cn" },
]
requires-python = ">=3.10"
dependencies = [
    "keyring>=25.0.0",
    "keyrings-cryptfile>=1.3.0",
]

[project.scripts]
credstore = "credstore.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --strict-config --no-header"
