[project]
name = "credstore"
version = "0.3.7"
description = "Cross-platform credential storage — OS keyring with AES-encrypted file backup"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "juzcn", email = "zhangjun@cueb.edu.cn" },
]
requires-python = ">=3.10"
dependencies = [
    "keyring>=25.0.0",
    "keyrings-cryptfile>=1.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/juzcn/slife"
Repository = "https://github.com/juzcn/slife"
Documentation = "https://github.com/juzcn/slife/blob/main/credstore/README.md"

[project.scripts]
credstore = "credstore.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["credstore"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --strict-config --no-header"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
]
